# tower-llm

./: CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN_UPDATES.md  HANDOFF_GUIDE.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_PLAN.md  NOTES.md  README.md  TODO.md  TODO_CONTEXT.md  TODO_RUN_CONTEXT_AND_GROUPS.md  TOWER_ARCHITECTURE.md  lefthook.yml  test_all_next_examples.sh
.cursor/rules/: always.mdc
.github/workflows/: ci.yml  release.yml
agent-helpers/epics/tower/: design-guidelines.md  migration-plan.md  post-migration-critical-review-2.md  post-migration-critical-review.md
agent-helpers/epics/tower-next/: TODO.md
benches/: runner_parallel.rs
examples/: agent_loop.rs  approval.rs  auto_compaction.rs  budgets_policy.rs  calculator.rs  capability_layers.rs  codec_bijection.rs  complete_agent.rs  comprehensive_demo.rs  concurrency_tools.rs  contextual.rs  db_migrator.rs  dynamic_js_tools.rs  explicit_schema_validation.rs  generate_conversations.rs  group_no_shared.rs  group_shared.rs  groups_routing.rs  handoff_basic.rs  handoff_compaction.rs  handoff_composite.rs  handoff_integration.rs  handoff_sequential.rs  hello_world.rs  layers_example.rs  mixed_shared_individual.rs  multi_agent_research.rs  next_agent_loop.rs  next_budgets_policy.rs  next_codec_bijection.rs  next_complete_agent.rs  next_comprehensive_demo.rs  next_concurrency_tools.rs  next_groups_routing.rs  next_layers_example.rs  next_observability_tracing.rs  next_recording_replay.rs  next_resilience_retry.rs  next_services_example.rs  next_sessions_memory.rs  (+22 more)
openai-agents-derive/: Cargo.toml
openai-agents-derive/src/: lib.rs
proptest-regressions/auto_compaction/: mod.txt
proptest-regressions/groups/: mod.txt
src/: agent.rs  config.rs  context.rs  core.rs  env.rs  error.rs  group.rs  guardrail.rs  handoff.rs  items.rs  lib.rs  memory.rs  model.rs  result.rs  retry.rs  runner.rs  service.rs  sqlite_session.rs  tool.rs  tool_service.rs  tracing.rs  usage.rs
src/approvals/: mod.rs
src/auto_compaction/: mod.rs
src/budgets/: mod.rs
src/codec/: mod.rs
src/concurrency/: mod.rs
src/groups/: mod.rs
src/next/: mod.rs
src/next/approvals/: mod.rs
src/next/budgets/: mod.rs
src/next/codec/: mod.rs
src/next/concurrency/: mod.rs
src/next/groups/: mod.rs
src/next/layers/: mod.rs
src/next/observability/: mod.rs
src/next/provider/: mod.rs
src/next/recording/: mod.rs
src/next/resilience/: mod.rs
src/next/services/: mod.rs
src/next/sessions/: mod.rs
src/next/streaming/: mod.rs
src/next/utils/: mod.rs
src/observability/: mod.rs
src/provider/: mod.rs
src/recording/: mod.rs
src/resilience/: mod.rs
src/sessions/: mod.rs
src/streaming/: mod.rs
src/tap/: mod.rs
src/validation/: gen.rs  mod.rs  mutate.rs
tests/: integration.rs  integration_sqlite.rs  layer_ordering.rs  max_tokens_passthrough.rs  runner_service_tools.rs  schema_behavior.rs  tower_architecture.rs  tower_integration.rs  tower_patterns.rs  typed_layering.rs  validation_mutations.proptest-regressions  validation_mutations.rs  validation_pbt.proptest-regressions  validation_pbt.rs
