[package]
name = "openai-agents-rs"
version = "0.1.1"
edition = "2021"
description = "A port of the openai agents SDK to Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kofron/openai-agents-rs"
keywords = ["openai", "agents", "llm", "ai", "multi-agent"]

# Basic hello-world example
[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

# Example of an agent using a tool
[[example]]
name = "tool_example"
path = "examples/tool_example.rs"

# Advanced multi-tool calculator agent
[[example]]
name = "calculator"
path = "examples/calculator.rs"

# Advanced multi-agent research system with handoffs
[[example]]
name = "multi_agent_research"
path = "examples/multi_agent_research.rs"

# Example of using session memory and guardrails
[[example]]
name = "session_with_guardrails"
path = "examples/session_with_guardrails.rs"

# Example of persistent sessions with SQLite
[[example]]
name = "persistent_session"
path = "examples/persistent_session.rs"

# Example of parallel tool execution
[[example]]
name = "parallel_tools"
path = "examples/parallel_tools.rs"

[[example]]
name = "rpn_calculator"
path = "examples/rpn_calculator.rs"

[[example]]
name = "db_migrator"
path = "examples/db_migrator.rs"


[dependencies]
async-openai = "0.29.0"
async-trait = "0.1"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
toml = "0.8"
rand = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }
rusqlite = "0.31"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
pretty_assertions = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.20.0"
