[package]
name = "openai-agents-rs"
version = "0.1.1"
edition = "2021"
description = "A port of the openai agents SDK to Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kofron/openai-agents-rs"
keywords = ["openai", "agents", "llm", "ai", "multi-agent"]

# Examples are auto-discovered from examples/ directory


[dependencies]
async-openai = "0.29.0"
async-trait = "0.1"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
toml = "0.9.5"
rand = "0.9.2"
schemars = { version = "0.8.21", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }
rusqlite = "0.31"
tower = { version = "0.5.2", features = ["util", "steer", "buffer"] }
jsonschema = "0.32.1"
openai-agents-derive = { path = "openai-agents-derive" }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.13"
tokio-test = "0.4"
pretty_assertions = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.20.0"
once_cell = "1.19"

[[bench]]
name = "runner_parallel"
harness = false
