[package]
name = "tower-llm"
version = "0.0.11"
edition = "2021"
description = "A Tower-based framework for building LLM & agent workflows in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kofron/tower-llm"
keywords = ["openai", "agents", "llm", "ai", "multi-agent"]


[dependencies]
async-openai = "0.29.1"
async-trait = "0.1"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
toml = "0.9.5"
rand = "0.9.2"
schemars = { version = "0.8.21", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }
rusqlite = "0.31"
tower = { version = "0.5.2", features = ["util", "steer", "buffer"] }
jsonschema = "0.32.1"
proptest = "1.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
mockall = "0.13"
tokio-test = "0.4"
pretty_assertions = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0"
proptest = "1.0"
tempfile = "3.20.0"
once_cell = "1.19"
boa_engine = "0.20.0"
